# aws-lambda-quarto-template

./: .gitignore  README.md  pyproject.toml  requirements.txt
reports/my_report/: _quarto.yml  my_report.qmd
reports/my_report/scripts/: get_data.py
src/my_package/: example.py
